Fix pre overflow

--- a/src/app.css
+++ b/src/app.css
@@ -175,7 +175,7 @@
     }
 
     pre {
-      @apply block mb-2.5 last:mb-0 bg-slate-100 px-3 py-2 rounded text-sm text-wrap;
+      @apply block mb-2.5 last:mb-0 bg-slate-100 px-3 py-2 rounded text-sm text-wrap break-words;
 
       .dark & {
         @apply bg-slate-800;
